--- a/ShopPeiSong/公共文件/ShareSDK/Support/Optional/ShareSDKUI.bundle/en.lproj/ShareSDKUI_Localizable.strings
+++ b/ShopPeiSong/公共文件/ShareSDK/Support/Optional/ShareSDKUI.bundle/en.lproj/ShareSDKUI_Localizable.strings
@@ -6,14 +6,77 @@
   Copyright (c) 2015年 mob. All rights reserved.
 */
 
-"ShareType_0" = "Unknown";
-"ShareType_1" = "Sina Weibo";
-"ShareType_2" = "Tencent Weibo";
+//"ShareType_0" = "Unknown";
+//"ShareType_1" = "Sina Weibo";
+//"ShareType_2" = "Tencent Weibo";
+//"ShareType_5" = "Douban";
+//"ShareType_6" = "QZone";
+//"ShareType_7" = "Renren";
+//"ShareType_8" = "Kaixin";
+//"ShareType_9" = "Pengyou";
+//"ShareType_10" = "Facebook";
+//"ShareType_11" = "Twitter";
+//"ShareType_12" = "Yinxiang";
+//"ShareType_13" = "Foursquare";
+//"ShareType_14" = "Google+";
+//"ShareType_15" = "Instagram";
+//"ShareType_16" = "LinkedIn";
+//"ShareType_17" = "Tumblr";
+//"ShareType_18" = "Mail";
+//"ShareType_19" = "SMS";
+//"ShareType_20" = "Print";
+//"ShareType_21" = "Copy";
+//"ShareType_22" = "Wechat contacts";
+//"ShareType_23" = "Wechat moments";
+//"ShareType_24" = "QQ";
+//"ShareType_25" = "Instapaper";
+//"ShareType_26" = "Pocket";
+//"ShareType_27" = "YouDao Notes";
+//"ShareType_28" = "Soho Kan";
+//"ShareType_30" = "Pinterest";
+//"ShareType_34" = "Flickr";
+//"ShareType_35" = "Dropbox";
+//"ShareType_36" = "VKontakte";
+//"ShareType_37" = "Wechat favorites";
+//"ShareType_38" = "Yixin contacts";
+//"ShareType_39" = "Yixin moments";
+//"ShareType_40" = "Yixin favorites";
+//"ShareType_41" = "Mingdao";
+//"ShareType_42" = "Line";
+//"ShareType_43" = "WhatsApp";
+//"ShareType_44" = "KakaoTalk";
+//"ShareType_45" = "KakaoStory";
+//"ShareType_46" = "Messenger";
+//"ShareType_50" = "Alipay";
+//"ShareType_51" = "Alipay moments";
+//"ShareType_52" = "DingTalk";
+//"ShareType_53" = "YouTube";
+//"ShareType_54" = "Meipai";
+//
+//"ShareType_995" = "Kakao";
+//"ShareType_996" = "Evernote";
+//"ShareType_997" = "Wechat";
+//"ShareType_998" = "QQ";
+//"ShareType_999" = "Any";
+//
+//"Cancel" = "Cancel";
+//"ShareTo" = "Share to";
+//"ShareContent" = "Share Content";
+//"Alert" = "Alert";
+//"OK" = "OK";
+//"InputTheShareContent" = "Please input the share content";
+//"Share" = "Share";
+//"AuthorizeFailed" = "Authorize failed";
+//"NoValidPlatform" = "There is no valid platform to show.The reason may be that the active platform need app client to share but the iOS device do not have that app client.";
+
+"ShareType_0" = "未知";
+"ShareType_1" = "新浪微博";
+"ShareType_2" = "腾讯微博";
 "ShareType_5" = "Douban";
-"ShareType_6" = "QZone";
+"ShareType_6" = "空间";
 "ShareType_7" = "Renren";
 "ShareType_8" = "Kaixin";
-"ShareType_9" = "Pengyou";
+"ShareType_9" = "朋友";
 "ShareType_10" = "Facebook";
 "ShareType_11" = "Twitter";
 "ShareType_12" = "Yinxiang";
@@ -22,12 +85,12 @@
 "ShareType_15" = "Instagram";
 "ShareType_16" = "LinkedIn";
 "ShareType_17" = "Tumblr";
-"ShareType_18" = "Mail";
-"ShareType_19" = "SMS";
+"ShareType_18" = "邮件";
+"ShareType_19" = "信息";
 "ShareType_20" = "Print";
-"ShareType_21" = "Copy";
-"ShareType_22" = "Wechat contacts";
-"ShareType_23" = "Wechat moments";
+"ShareType_21" = "复制";
+"ShareType_22" = "微信好友";
+"ShareType_23" = "朋友圈";
 "ShareType_24" = "QQ";
 "ShareType_25" = "Instapaper";
 "ShareType_26" = "Pocket";
@@ -37,7 +100,7 @@
 "ShareType_34" = "Flickr";
 "ShareType_35" = "Dropbox";
 "ShareType_36" = "VKontakte";
-"ShareType_37" = "Wechat favorites";
+"ShareType_37" = "微信收藏";
 "ShareType_38" = "Yixin contacts";
 "ShareType_39" = "Yixin moments";
 "ShareType_40" = "Yixin favorites";
@@ -55,19 +118,17 @@
 
 "ShareType_995" = "Kakao";
 "ShareType_996" = "Evernote";
-"ShareType_997" = "Wechat";
+"ShareType_997" = "微信";
 "ShareType_998" = "QQ";
 "ShareType_999" = "Any";
 
-"Cancel" = "Cancel";
-"ShareTo" = "Share to";
-"ShareContent" = "Share Content";
+"Cancel" = "取消";
+"ShareTo" = "分享到";
+"ShareContent" = "分享内容";
 "Alert" = "Alert";
 "OK" = "OK";
 "InputTheShareContent" = "Please input the share content";
-"Share" = "Share";
+"Share" = "分享";
 "AuthorizeFailed" = "Authorize failed";
 "NoValidPlatform" = "There is no valid platform to show.The reason may be that the active platform need app client to share but the iOS device do not have that app client.";
-
-
 
